PixelPropsUtils: Cleanup and move everything to Resources
* Cleanup function calls and remove unnecessary conditions
* move packages, fp, model, device to resources so that they can be overlayed

Change-Id: I6a6caa18194147b91661d3444956a872c8bf5af3
Signed-off-by: Simão Gomes Viana <devel@superboring.dev>

--- a/core/res/res/values/arrow_config.xml
+++ b/core/res/res/values/arrow_config.xml
@@ -19,4 +19,10 @@
     <!-- Whether to cancel fingerprint operation if not idle -->
     <bool name="config_fpCancelIfNotIdle">false</bool>
 
+    <!-- PixelPropUtils -->
+    <java-symbol type="array" name="gaaps_package_names" />
+    <java-symbol type="string" name="build_device" />
+    <java-symbol type="string" name="build_fp" />
+    <java-symbol type="string" name="build_model" />
+
 </resources>
