resource fixes after udfps
Signed-off-by: Simão Gomes Viana <devel@superboring.dev>

--- a/packages/SystemUI/res/values/arrow_config.xml
+++ b/packages/SystemUI/res/values/arrow_config.xml
@@ -58,4 +58,7 @@
          before the screen has had chance to switch out of HBM mode -->
      <integer name="config_udfpsDimmingDisableDelay">0</integer>
 
+    <!-- Udfps vendor code -->
+    <integer name="config_udfpsVendorCode">0</integer>
+
 </resources>
