use old mobile icons
Signed-off-by: Simão Gomes Viana <devel@superboring.dev>

--- a/core/res/res/values/cr_config.xml
+++ b/core/res/res/values/cr_config.xml
@@ -13,5 +13,5 @@
 -->
 <resources>
     <!-- Whether to use old mobile type icons as default -->
-    <bool name="config_useOldMobileIcons">false</bool>
+    <bool name="config_useOldMobileIcons">true</bool>
 </resources>
