--- a/packages/SystemUI/res/layout/volume_dialog.xml
+++ b/packages/SystemUI/res/layout/volume_dialog.xml
@@ -25,7 +25,6 @@
     android:clipToPadding="false"
     android:theme="@style/volume_dialog_theme">
 
-    <!-- right-aligned to be physically near volume button -->
     <LinearLayout
         android:id="@+id/volume_dialog"
         android:layout_width="wrap_content"
@@ -33,6 +32,7 @@
         android:gravity="right"
         android:layout_gravity="right"
         android:layout_marginRight="@dimen/volume_dialog_panel_transparent_padding_right"
+        android:layout_marginLeft="@dimen/volume_panel_left_side_padding"
         android:orientation="vertical"
         android:clipToPadding="false"
         android:clipChildren="false">
