PixelProps: Fixup props resources

--- a/core/res/res/values/yaap_strings.xml
+++ b/core/res/res/values/yaap_strings.xml
@@ -18,9 +18,9 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Strings for PixelPropUtils -->
-    <string name="build_device"></string>
-    <string name="build_fp"></string>
-    <string name="build_model"></string>
+    <string name="build_device">redfin</string>
+    <string name="build_fp">google/redfin/redfin:13/TQ3A.230805.001/10316531:user/release-keys</string>
+    <string name="build_model">Pixel 5</string>
     <string name="persist_device"></string>
     <string name="persist_fp"></string>
     <string name="persist_model"></string>
