PixelPropsUtils: add defaults for config_stockFingerprint and config_netflixSpoofModel
overlay: Spoof netflix to Mi 11 Lite 5G

Unlocks standard HDR10 in netflix,

Signed-off-by: BladeRunner-A2C <prisoner56898@protonmail.com>
Signed-off-by: Simão Gomes Viana <devel@superboring.dev>

--- a/core/res/res/values/bliss_config.xml
+++ b/core/res/res/values/bliss_config.xml
@@ -5,8 +5,11 @@
 -->
 <resources>
 
+    <!-- Device model (Build.MODEL) to spoof for netflix, if not empty -->
+    <string name="config_netflixSpoofModel" translatable="false">M2101K9G</string>
+
     <!-- Build fingerprint from the stock ROM -->
-    <string name="config_stockFingerprint" translatable="false"></string>
+    <string name="config_stockFingerprint" translatable="false">generic/device/device:0.0.0/ABCDEF/1234567:user/release-keys</string>
 
     <!-- Build properties from a GMS certified device against current platform SPL level -->
     <string-array name="config_certifiedBuildProperties" translatable="false">
