fixup! udfps: Add support for udfps on aod without dedicated sensor
* Basically reapplied the commit from crDroid and let Git resolve
  the possible conflicts.

Co-authored-by: TheScarastic <warabhishek@gmail.com>
Signed-off-by: Stella Bloom <windowz414@gnuweeb.org>

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -1,4 +1,7 @@
 <resources>
     <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
     <bool name="config_cleanupUnusedFingerprints">true</bool>
+
+    <!-- Udfps vendor code -->
+    <integer name="config_udfpsVendorCode">0</integer>
 </resources>
