--- a/packages/SystemUI/res/values/ids.xml
+++ b/packages/SystemUI/res/values/ids.xml
@@ -125,6 +125,7 @@
     <item type="id" name="action_snooze_short"/>
     <item type="id" name="action_snooze_long"/>
     <item type="id" name="action_snooze_longer"/>
+    <item type="id" name="action_snooze_even_longer"/>
     <item type="id" name="action_snooze_assistant_suggestion_1"/>
     <item type="id" name="action_snooze"/>
 
