custom_strings: improve wording on not charging

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -17,6 +17,6 @@
 <resources>
     <string name="qsTileBatteryChargeLimitLabel">Charging Limit</string>
     <string name="qsTileBatteryChargeLimitCharging">Charging</string>
-    <string name="qsTileBatteryChargeLimitNotCharging">Not charging</string>
+    <string name="qsTileBatteryChargeLimitNotCharging">Disengaged</string>
     <string name="qsTileBatteryChargeLimitUnavailable">Unavailable</string>
 </resources>
